--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~9.1.4",
     "@angular/platform-browser-dynamic": "~9.1.4",
     "@angular/router": "~9.1.4",
+    "ng-starrating": "^1.0.20",
     "rxjs": "~6.5.4",
+    "swiper": "^6.3.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
